# FIRST-CRUD

./: README.md  database.py  pyproject.toml
src/: main.py  test.db
