[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Joao Pedro <joaopo.0607@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.4"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
